--- a/main.css
+++ b/main.css
@@ -160,13 +160,13 @@ h5 {
 	margin: .8em 0 0 0;
 	}
 h6 {
-		font-weight: 200;
-		color: #fff;
-		font-size: .55em;
-		text-transform: uppercase;
-		letter-spacing: .03em;
-		line-height: 1em;
-		margin: .8em 0 .8em 0;
+	font-weight: 200;
+	color: #fff;
+	font-size: .55em;
+	text-transform: uppercase;
+	letter-spacing: .03em;
+	line-height: 1em;
+	margin: .8em 0 .8em 0;
 	}
 p {
 	color: #999;
@@ -420,7 +420,7 @@ text {
 	height: auto;
 	bottom: 120px;
 	overflow: hidden;
-	padding-bottom: 20px;	
+	padding: 10px 0 10px 0;	
 	
 }
 	
@@ -453,7 +453,7 @@ here {
 	display: inline-block;
 	position: relative;
 	width: 100%;
-	max-height: 40%;
+	max-height: 20%;
 	height: auto;
 	top: 0;
 	bottom: 0;
@@ -468,12 +468,22 @@ list {
 	display: inline-block;
 	overflow-y: scroll;
 	margin: 0 auto;
-	max-height: 100px;
+	height: 100px;
 	position: relative;
 	width: 100%;
 	pointer-events: auto;
 }	
-list h6 {
+there {
+	
+	display: inline-block;
+	overflow-y: scroll;
+	margin: 0 auto;
+	max-height: 80%;
+	position: relative;
+	width: 100%;
+	pointer-events: auto;
+}	
+there h6, list h6 {
 
 	padding: 0 0 1.6em 0;	
 	
@@ -495,7 +505,11 @@ li a {
 li a:hover {
 	color: #fff;
 	}
-
+#services > li {
+	
+	color: #999;
+	font-size: .9em;
+}
 here > h6 {
 
     padding: .6em 0 0 0; 
@@ -619,7 +633,7 @@ images {
 	background-color: none;
 	pointer-events: auto;	
 	float: right;
-	padding: 0 0 .5em .5em;
+	padding: 5px 0 .5em .5em;
 	z-index: 13;
 
 } 
