Form launches map via geolocation

--- a/main.css
+++ b/main.css
@@ -34,30 +34,55 @@ body {
 	display: block;
 }
 
-a {
+a, .ui-page-theme-a {
 	
-	text-decoration: none;
+	text-decoration: none!important;
+	text-shadow: 0 0 0 rgba(0,0,0,0)!important;
 	
 }
 
 #visibleform {
 	
 	display: block;
-	position: fixed;
+	position: relative;
 	margin: 0 auto;
 	float: left;
-	width: 30%;
+	width: 100%;
 	z-index: 9999;
 	pointer-events: auto;
 	background-color: #fff;
 	height: 100%;
 	overflow: scroll;
+	padding: 10px;
 	
 }
-
+.ui-input-text, .ui-input-search, .ui-input-text input {
+	
+	margin: auto;
+	border-width: 0;
+	border-style: solid;
+	border-color: none;
+	background-color: #EEF4DE;
+}
+#input {
+	
+	width: 8.8em;
+	min-height: auto;
+	height: 30px;
+}
+.ui-controlgroup, .ui-field-contain {
+	width: 100%!important;
+	margin: 0;
+	float: left;
+	height: auto;
+	position: relative;
+}
 h1 {
 	
 	margin: 0;
+	min-width: 51%;
+	min-height: 2em;
+	line-height: 2em;
 	
 }
 
@@ -119,17 +144,17 @@ why a {
 	position: fixed;
 	left: auto;
 	top: auto;
-	bottom: 34px;
+	bottom: 0;
 	right: 10px;
 	display: block;
-	width: 150px;
-	height: auto;
+	width: auto;
+	height: 34px;
 	
 }
 #publish img {
 	
-	width: 100%;
-	height: auto;
+	width: auto;
+	height: 100%;
 	position: relative;
 	display: inline-block;
 	margin: 0;
@@ -257,18 +282,17 @@ where {
 
 #mainlabel {
 
-	left: 50%;
-	padding: 10px;
-	width: auto;
-	right: 10px;
+	left: auto;
+	width: 22.5em;
+	right: 0;
 	float: none;
-	position: fixed;
+	position: absolute;
 	background-color: none;
 	overflow-y: hidden;
 	overflow-x: hidden;
-	height: 0;
-	top: 10px;
-	bottom: 50%;
+	height: auto;
+	top: 7px;
+	bottom: 160px;
 	display: none;
 	pointer-events: none;
 	box-shadow: 1px 0px 1px 0px rgba(0,0,0,0.3);
@@ -279,18 +303,18 @@ where {
 
 #mainlabel.point {
 
-	left: 50%;
+	left: 10px;
 	width: auto;
 	right: 10px;
 	float: none;
 	position: fixed;
 	background-color: none;
 	background-image:
-	radial-gradient(circle at 0 100%, rgba(0, 0, 0, 0) 15px, #111 15px);
+	radial-gradient(circle at 50% 100%, rgba(0, 0, 0, 0) 15px, #111 15px);
 	overflow-y: hidden;
 	overflow-x: hidden;
 	height: auto;
-	top: 72px;
+	top: 78px;
 	display: block;
 	pointer-events: none;
 	bottom: 50%;
@@ -299,12 +323,11 @@ where {
 	-webkit-transform: translateZ(10);
 
 }
-
 #mainlabel.expand {
 
 	right: 10px;
 	left: auto;
-	max-width: 470px;
+	max-width: 100%;
 	width: auto;
 	float: none;
 	position: fixed;
@@ -335,7 +358,7 @@ where {
 	overflow-y: hidden;
 	overflow-x: hidden;
 	height: auto;
-	top: 72px;
+	top: 78px;
 	display: block;
 	pointer-events: none;
 	max-height: 50%;
@@ -356,7 +379,7 @@ where {
 	overflow-y: hidden;
 	overflow-x: hidden;
 	height: auto;
-	top: 72px;
+	top: 78px;
 	display: block;
 	pointer-events: none;
 	bottom: 50%;
@@ -384,7 +407,7 @@ day {
 	display: inline-block;
 	float: left;
 	margin: 0, auto;
-	width: 50px;	
+	width: 40px;	
 	}
 mo, tu, we, thu, fr, sa, su {
 	vertical-align: baseline;
@@ -400,7 +423,8 @@ info {
 	display: inline-block;
 	float: left;
 	margin: 0, auto;
-	width: 50%;
+	min-width: 48%;
+	max-width: 50%;
 	padding-top: .7em;
 	}
 contact {
@@ -428,20 +452,36 @@ text {
 	display: inline-block;
 	pointer-events: auto;
 	width: 100%;
-	float: left;		
+	float: left;
+	top: 0;		
 	margin: 0 auto;
 	height: auto;
 	bottom: 120px;
 	overflow: hidden;
-	padding: 10px 0 10px 0;	
+	padding: 10px 0 10px 10px;	
 	
 }
+
+where text {
 	
+	left: 0;
+	right: 0;
+	bottom: 36px;
+	top: auto;
+	max-height: 115px;
+	float: left;
+	margin: 0, auto;
+	width: auto!important;
+	position: absolute;
+	overflow-y: scroll;
+	
+}	
 
 leftlist {
 	display: inline-block;
 	width: 50%;
 	float: left;
+	padding-left: 10px;
 	padding-bottom: .75em;
 	height: auto;
 	max-height: 120px;
@@ -473,6 +513,7 @@ here {
 	overflow-y: hidden;
 	overflow-x: hidden;
 	pointer-events: auto;
+	padding-left: 10px;
 	z-index: 7;
 	-webkit-transform: translateZ(6);
 }
@@ -495,6 +536,7 @@ there {
 	position: relative;
 	width: 100%;
 	pointer-events: auto;
+	padding-left: 10px;
 }	
 there h6, list h6 {
 
@@ -715,6 +757,26 @@ searchbox {
 	padding: 0;
 	pointer-events: auto;
 }
+#type {
+	
+	top: 0;
+	left: auto;
+	right: 0;
+	display: inline-block;
+	width: auto;
+	margin: 0, auto;
+	padding: 0;
+	pointer-events: auto;
+	
+}
+#visibleform > label, #close {
+	
+	width: 19%;
+	text-align: right;
+}
+#close {
+	float: right;
+}
 .ui-widget {
 	width: 100%;
 	display: block;
@@ -723,12 +785,14 @@ searchbox {
 }
 input {
 	position: relative;
-	width: 160px;
 	display: inline-block;
 	float: right;
 	right: 0;
 }
-
+input.demo {
+	
+	 width: 100%; 
+}
 buttonbox {
 	top:0;
 	left:0;
@@ -738,7 +802,7 @@ buttonbox {
 	display: inline-block;
 	width: 100%;
 	}
-btn {
+btn, #visibleform > label {
 	display: inline-block;
 	width: 19%;
 	height: 30px;
@@ -746,6 +810,9 @@ btn {
 	margin: 0;
 	padding: 0;
 	}
+.activebutton {
+	z-index: 99999999999999999;
+}
 btn a h4 {
 	position: relative;
 	display: inline-block;
@@ -758,14 +825,14 @@ btn a h4 {
 btn a img {
 	position: relative;
 	display: inline-block;
-	width: 20%;
+	width: 17%;
 	height: auto;
 	float: right;
 	top: 10px;
 	z-index: 999;
 	right: .25em;
 }
-#hous {
+#H {
 	background-color: #E79404;
 	display: inline-block;
 	float: left;
@@ -775,7 +842,7 @@ btn a img {
 	text-decoration: none;
 	color: #fff;
 }
-#med {
+#M {
 	background-color: #DA1912;
 	display: inline-block;
 	float: left;
@@ -784,7 +851,7 @@ btn a img {
 	text-decoration: none;
 	color: #fff;
 }
-#food {
+#F {
 	background-color: #229701;
 	display: inline-block;
 	float: left;
@@ -793,7 +860,7 @@ btn a img {
 	text-decoration: none;
 	color: #fff;
 }
-#trav {
+#B {
 	background-color: #3D7AB4;
 	display: inline-block;
 	float: left;
@@ -801,6 +868,12 @@ btn a img {
 	height: 100%;
 	text-decoration: none;
 	color: #fff;
+}
+
+a#H.selected, a#B.selected, a#F.selected, a#M.selected {
+	
+	z-index: 9999999999;
+	
 }
 #all {
 	background-color: #333;
@@ -811,7 +884,6 @@ btn a img {
 	text-decoration: none;
 	color: #fff;
 }
-
 
 @media all and (min-width: 768px) {
 
@@ -834,6 +906,13 @@ btn a img {
 		right: 10px;
 
 	}
+	.ui-controlgroup, .ui-field-contain {
+
+		right: auto;
+		left: 0;
+		margin: 0, auto;
+		max-width: 100%;
+	}
 
 
 }
@@ -842,6 +921,23 @@ btn a img {
     /* Styles for Portrait screen */
 
 
+	@media all and (min-width: 400px) {
+
+		#mainlabel.point {
+
+			left: 50%;
+			background-image:
+			radial-gradient(circle at 0 100%, rgba(0, 0, 0, 0) 15px, #111 15px);
+
+		}
+		#mainlabel.expand {
+
+			max-width: 470px;
+
+		}
+		
+
+	}
 }
 
 @media all and (orientation:landscape) {
@@ -851,6 +947,9 @@ btn a img {
 	#mainlabel.point, #mainlabel.expand {
 
 		right: 10px;
+		left: 50%;
+		background-image:
+		radial-gradient(circle at 0 100%, rgba(0, 0, 0, 0) 15px, #111 15px);
 
 	}
 
