--- a/views/gallery.pug
+++ b/views/gallery.pug
@@ -129,6 +129,135 @@ if (infowindow === 'doc')
 							span.ms-font-s.ms-fontWeight-light #{doc.properties.address1} 
 
 						p.ms-font-xs #{doc.properties.phone}
+					div.ms-Grid-col.ms-u-sm12
+						p.ms-font-m Hours of Operation
+						div
+							span.ms-font-s.ms-fontWeight-semibold Monday: 
+							if (doc.properties.hours.mo.begin !== null)
+								span.ms-font-s #{moment(doc.properties.hours.mo.begin).format('LT')}
+								span  – 
+								span.ms-font-s #{moment(doc.properties.hours.mo.end).format('LT')}
+							else
+								if (doc.properties.hours.mo.allday === true)
+									span.ms-font-s 24-hours
+								else
+									span.ms-font-s Closed
+						div
+							span.ms-font-s.ms-fontWeight-semibold Tuesday: 
+							if (doc.properties.hours.tu.begin !== null)
+								span.ms-font-s #{moment(doc.properties.hours.tu.begin).format('LT')}
+								span  – 
+								span.ms-font-s #{moment(doc.properties.hours.tu.end).format('LT')}
+							else
+								if (doc.properties.hours.tu.allday === true)
+									span.ms-font-s 24-hours
+								else
+									span.ms-font-s Closed
+						div
+							span.ms-font-s.ms-fontWeight-semibold Wednesday: 
+							if (doc.properties.hours.we.begin !== null)
+								span.ms-font-s #{moment(doc.properties.hours.we.begin).format('LT')}
+								span  – 
+								span.ms-font-s #{moment(doc.properties.hours.we.end).format('LT')}
+							else
+								if (doc.properties.hours.we.allday === true)
+									span.ms-font-s 24-hours
+								else
+									span.ms-font-s Closed
+						div
+							span.ms-font-s.ms-fontWeight-semibold Thursday: 
+							if (doc.properties.hours.th.begin !== null)
+								span.ms-font-s #{moment(doc.properties.hours.th.begin).format('LT')}
+								span  – 
+								span.ms-font-s #{moment(doc.properties.hours.th.end).format('LT')}
+							else
+								if (doc.properties.hours.th.allday === true)
+									span.ms-font-s 24-hours
+								else
+									span.ms-font-s Closed
+						div
+							span.ms-font-s.ms-fontWeight-semibold Friday: 
+							if (doc.properties.hours.fr.begin !== null)
+								span.ms-font-s #{moment(doc.properties.hours.fr.begin).format('LT')}
+								span  – 
+								span.ms-font-s #{moment(doc.properties.hours.fr.end).format('LT')}
+							else
+								if (doc.properties.hours.fr.allday === true)
+									span.ms-font-s 24-hours
+								else
+									span.ms-font-s Closed
+						div
+							span.ms-font-s.ms-fontWeight-semibold Saturday: 
+							if (doc.properties.hours.sa.begin !== null)
+								span.ms-font-s #{moment(doc.properties.hours.sa.begin).format('LT')}
+								span  – 
+								span.ms-font-s #{moment(doc.properties.hours.sa.end).format('LT')}
+							else
+								if (doc.properties.hours.sa.allday === true)
+									span.ms-font-s 24-hours
+								else
+									span.ms-font-s Closed
+						div
+							span.ms-font-s.ms-fontWeight-semibold Sunday: 
+							if (doc.properties.hours.su.begin !== null)
+								span.ms-font-s #{moment(doc.properties.hours.su.begin).format('LT')}
+								span  – 
+								span.ms-font-s #{moment(doc.properties.hours.su.end).format('LT')}
+							else
+								if (doc.properties.hours.su.allday === true)
+									span.ms-font-s 24-hours
+								else
+									span.ms-font-s Closed
+					div.ms-Grid-col.ms-u-sm12
+						p.ms-font-m Available Services
+						if (doc.properties.clothing === true)
+							div.ms-Grid-col.ms-u-sm6
+								div.ms-Grid-row
+									span.ms-font-s Clothing
+						if (doc.properties.computer === true)
+							div.ms-Grid-col.ms-u-sm6
+								div.ms-Grid-row
+									span.ms-font-s Computer Access
+						if (doc.properties.dayroom === true)
+							div.ms-Grid-col.ms-u-sm6
+								div.ms-Grid-row
+									span.ms-font-s Day Room
+						if (doc.properties.dental === true)
+							div.ms-Grid-col.ms-u-sm6
+								div.ms-Grid-row
+									span.ms-font-s Dental Services
+						if (doc.properties.pantry === true)
+							div.ms-Grid-col.ms-u-sm6
+								div.ms-Grid-row
+									span.ms-font-s Computer Access
+						if (doc.properties.housing === true)
+							div.ms-Grid-col.ms-u-sm6
+								div.ms-Grid-row
+									span.ms-font-s Housing Assistance
+						if (doc.properties.meals === true)
+							div.ms-Grid-col.ms-u-sm6
+								div.ms-Grid-row
+									span.ms-font-s Meals
+						if (doc.properties.medical === true)
+							div.ms-Grid-col.ms-u-sm6
+								div.ms-Grid-row
+									span.ms-font-s Medical Services
+						if (doc.properties.personalcare === true)
+							div.ms-Grid-col.ms-u-sm6
+								div.ms-Grid-row
+									span.ms-font-s Personal Care items
+						if (doc.properties.showers === true)
+							div.ms-Grid-col.ms-u-sm6
+								div.ms-Grid-row
+									span.ms-font-s Showers
+						if (doc.properties.shelter === true)
+							div.ms-Grid-col.ms-u-sm6
+								div.ms-Grid-row
+									span.ms-font-s Shelter
+						if (doc.properties.transportation === true)
+							div.ms-Grid-col.ms-u-sm6
+								div.ms-Grid-row
+									span.ms-font-s Transportation Assistance
 				if (loggedin)
 					div.ms-Grid-col.ms-u-sm1
 						div.ms-Grid-row
